[package]
name = "genmeta-home"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6"
snafu = "0.9"
serde = { version = "1", features = ["derive"] }

futures = { version = "0.3", optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
tokio = { version = "1", features = ["fs", "io-util"], optional = true }
toml = { version = "1", optional = true }
x509-parser = { version = "0.18", optional = true }

[features]
default = ["ssl", "default-config"]
ssl = ["dep:tokio", "dep:futures", "dep:rustls", "dep:x509-parser"]
default-config = ["dep:tokio", "dep:toml"]
